--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,10 @@
 				<jdk>(,9)</jdk>
 			</activation>
 			<properties>
+				<!-- maven plugins -->
 				<maven.compiler.version>3.5.1</maven.compiler.version>
+				<!-- dependencies -->
+				<mockito.version>2.10.0</mockito.version>
 			</properties>
 			<build>
 				<plugins>
