--- a/src/test/resources/logging.properties
+++ b/src/test/resources/logging.properties
@@ -2,7 +2,7 @@
 handlers = java.util.logging.ConsoleHandler, java.util.logging.FileHandler
 
 # test output
-java.util.logging.FileHandler.pattern=target/test.log
+java.util.logging.FileHandler.pattern=target/tests-javautillogging.log
 
 # our configuration
 java.util.logging.SimpleFormatter.format=%1$tF %1$tT.%1$tL %4$7s (%2$s) [%3$s] %5$s%6$s%n
