--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,8 +1,11 @@
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=ALL, Console, File
 
-log4j.logger.org.evolvis=DEBUG
-log4j.logger.com.sun.mail=DEBUG
+log4j.appender.Console=org.apache.log4j.ConsoleAppender
+log4j.appender.Console.Threshold=INFO
+log4j.appender.Console.layout=org.apache.log4j.PatternLayout
+log4j.appender.Console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %7p (%t) [%c] %m%n
 
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %7p (%t) [%c] %m%n
+log4j.appender.File=org.apache.log4j.FileAppender
+log4j.appender.File.file=target/tests-log4j.log
+log4j.appender.File.layout=org.apache.log4j.PatternLayout
+log4j.appender.File.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %7p (%t) [%c] %m%n
