add a download command for the source tarball

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+	To retrieve the source code, cool instructions and other aids:
+
+	$ mvn -U -Dartifact=org.evolvis.tartools:maven-parent:RELEASE:tgz:source -DoutputDirectory=. dependency:copy #
+
+	Replace RELEASE with the <version> number below to get the corresponding artefact.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.evolvis.tartools</groupId>
