--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,18 @@
 		<maven.surefire.version>2.19</maven.surefire.version>
 		<maven.war.version>2.6</maven.war.version>
 		<pitest.plugin.version>1.0.0</pitest.plugin.version>
+		<!-- updates scheduled for testing --><!--
+		<gmavenplus.plugin.version>1.6.1</gmavenplus.plugin.version>
+		<maven.assembly.version>3.1.0</maven.assembly.version>
+		<maven.compiler.version>3.8.0</maven.compiler.version>
+		<maven.eclipse.version>2.10</maven.eclipse.version>
+		<maven.exec.version>1.6.0</maven.exec.version>
+		<maven.jacoco.version>0.8.2</maven.jacoco.version>
+		<maven.jar.version>3.1.0</maven.jar.version>
+		<maven.shade.version>3.2.0</maven.shade.version>
+		<maven.source.version>3.0.1</maven.source.version>
+		<maven.surefire.version>2.22.0</maven.surefire.version>
+		-->
 	</properties>
 	<scm>
 		<connection>scm:git:https://evolvis.org/anonscm/git/tartools/mvnparent.git</connection>
