--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
 		<maven.shade.version>3.2.0</maven.shade.version>
 		<maven.source.version>3.0.1</maven.source.version>
 		<maven.surefire.version>2.22.0</maven.surefire.version>
+		<pitest.plugin.version>1.4.3</pitest.plugin.version>
 		-->
 	</properties>
 	<scm>
