--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 		<maven.minimum.version>3.2</maven.minimum.version>
 		<doclint.optappend>-Xdoclint:all</doclint.optappend>
 		<!-- maven plugins -->
-		<gmavenplus.plugin.version>1.5</gmavenplus.plugin.version>
+		<gmavenplus.plugin.version>1.6.1</gmavenplus.plugin.version>
 		<maven.assembly.version>3.1.0</maven.assembly.version>
 		<maven.buildhelper.version>3.0.0</maven.buildhelper.version>
 		<maven.compiler.version>3.8.0</maven.compiler.version>
@@ -215,7 +215,7 @@
 					<executions>
 						<execution>
 							<goals>
-								<goal>testCompile</goal>
+								<goal>compileTests</goal>
 							</goals>
 						</execution>
 					</executions>
