generate an extra JAR with classifyer testcp
use: as plugin dependency to get plugins’ logback use test config

--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,25 @@
 							</descriptors>
 						</configuration>
 					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-jar-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>generate-testcp-jar</id>
+								<phase>package</phase>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+								<configuration>
+									<classifier>testcp</classifier>
+									<includes>
+										<include>src/test/resources</include>
+									</includes>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
