--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,11 @@
 		<profile>
 			<id>build-mvnparent</id>
 			<build>
+				<testResources>
+					<testResource>
+						<directory>src/test/resources</directory>
+					</testResource>
+				</testResources>
 				<plugins>
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
@@ -199,17 +204,11 @@
 						<artifactId>maven-jar-plugin</artifactId>
 						<executions>
 							<execution>
-								<id>generate-testcp-jar</id>
+								<id>generate-tests-jar</id>
 								<phase>package</phase>
 								<goals>
-									<goal>jar</goal>
+									<goal>test-jar</goal>
 								</goals>
-								<configuration>
-									<classifier>testcp</classifier>
-									<includes>
-										<include>src/test/resources/*</include>
-									</includes>
-								</configuration>
 							</execution>
 						</executions>
 					</plugin>
