--- a/pom.xml
+++ b/pom.xml
@@ -154,11 +154,6 @@
 		<profile>
 			<id>build-mvnparent</id>
 			<build>
-				<testResources>
-					<testResource>
-						<directory>src/test/resources</directory>
-					</testResource>
-				</testResources>
 				<plugins>
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
@@ -211,6 +206,10 @@
 								</goals>
 							</execution>
 						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-resources-plugin</artifactId>
 					</plugin>
 				</plugins>
 			</build>
