--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,15 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-resources-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>generate-test-resources</id>
+								<phase>process-test-resources</phase>
+								<goals>
+									<goal>testResources</goal>
+								</goals>
+							</execution>
+						</executions>
 					</plugin>
 				</plugins>
 			</build>
