--- a/pom.xml
+++ b/pom.xml
@@ -82,12 +82,6 @@
 		<url>https://evolvis.org/plugins/scmgit/cgi-bin/gitweb.cgi?p=tartools/mvnparent.git</url>
 		<tag>HEAD</tag>
 	</scm>
-	<distributionManagement>
-		<repository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-		</repository>
-	</distributionManagement>
 	<profiles>
 		<profile>
 			<id>jdk8orolder</id>
@@ -222,6 +216,34 @@
 					</plugin>
 				</plugins>
 			</build>
+		</profile>
+		<profile>
+			<id>dstrepo-central</id>
+			<distributionManagement>
+				<repository>
+					<id>ossrh</id>
+					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+				</repository>
+				<snapshotRepository>
+					<id>ossrh</id>
+					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+				</snapshotRepository>
+			</distributionManagement>
+		</profile>
+		<profile>
+			<id>dstrepo-tarent</id>
+			<distributionManagement>
+				<repository>
+					<id>tarent-nexus</id>
+					<name>tarent-nexus releases</name>
+					<url>https://repo-bn-01.lan.tarent.de/repository/maven-releases</url>
+				</repository>
+				<snapshotRepository>
+					<id>tarent-nexus</id>
+					<name>tarent-nexus snapshots</name>
+					<url>https://repo-bn-01.lan.tarent.de/repository/maven-snapshots</url>
+				</snapshotRepository>
+			</distributionManagement>
 		</profile>
 	</profiles>
 	<build>
