--- a/pom.xml
+++ b/pom.xml
@@ -579,6 +579,7 @@
 	</build>
 	<dependencyManagement>
 		<dependencies>
+			<!-- use this in plugin[].dependencies to make it log sanely -->
 			<dependency>
 				<groupId>org.evolvis.tartools</groupId>
 				<artifactId>maven-parent</artifactId>
