--- a/pom.xml
+++ b/pom.xml
@@ -94,17 +94,6 @@
 				<!-- dependencies -->
 				<mockito.version>2.10.0</mockito.version>
 			</properties>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<configuration>
-							<additionalOptions>${doclint.optappend}</additionalOptions>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
 		</profile>
 		<profile>
 			<id>jdk9ornewer</id>
@@ -117,7 +106,6 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<configuration>
-							<additionalOptions>-html4 ${doclint.optappend}</additionalOptions>
 							<javadocExecutable>/usr/bin</javadocExecutable>
 						</configuration>
 					</plugin>
@@ -407,6 +395,10 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
 					<version>${maven.javadoc.version}</version>
+					<configuration>
+						<additionalOptions>${doclint.optappend}</additionalOptions>
+						<detectOfflineLinks>false</detectOfflineLinks>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
