--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<configuration>
 							<javadocExecutable>/usr/bin</javadocExecutable>
+							<source>${javaRelease}</source>
 						</configuration>
 					</plugin>
 				</plugins>
