--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 		<maven.compiler.release>${javaRelease}</maven.compiler.release>
 		<!-- http://groovy.github.io/GMavenPlus/compileTests-mojo.html#targetBytecode -->
 		<gmavenplus.javaRelease>1.8</gmavenplus.javaRelease>
+		<maven.dependency.analyseFailBuild>false</maven.dependency.analyseFailBuild>
 		<maven.minimum.version>3.2</maven.minimum.version>
 		<doclint.optappend>-Xdoclint:all</doclint.optappend>
 		<!-- maven plugins -->
@@ -58,6 +59,7 @@
 		<maven.assembly.version>3.1.1</maven.assembly.version>
 		<maven.buildhelper.version>3.0.0</maven.buildhelper.version>
 		<maven.compiler.version>3.8.0</maven.compiler.version>
+		<maven.dependency.version>3.1.1</maven.dependency.version>
 		<maven.deploy.version>2.8.2</maven.deploy.version>
 		<maven.ear.version>2.10.1</maven.ear.version>
 		<maven.eclipse.version>2.10</maven.eclipse.version>
@@ -325,6 +327,11 @@
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>${maven.dependency.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-deploy-plugin</artifactId>
 					<version>${maven.deploy.version}</version>
 				</plugin>
@@ -502,6 +509,40 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>analyse-dependency-management</id>
+						<goals>
+							<goal>analyze-dep-mgt</goal>
+						</goals>
+						<configuration>
+							<failBuild>${maven.dependency.analyseFailBuild}</failBuild>
+							<ignoreDirect>false</ignoreDirect>
+						</configuration>
+					</execution>
+					<execution>
+						<id>analyse-dependency-duplicates</id>
+						<goals>
+							<goal>analyze-duplicate</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>analyse-dependency-usage</id>
+						<configuration>
+							<failOnWarning>${maven.dependency.analyseFailBuild}</failOnWarning>
+							<outputXML>true</outputXML>
+							<verbose>true</verbose>
+						</configuration>
+						<goals>
+							<goal>analyze-only</goal>
+						</goals>
+					</execution>
+				</executions>
+				<inherited>true</inherited>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
