--- a/src/test/resources/logging.properties
+++ b/src/test/resources/logging.properties
@@ -6,7 +6,7 @@ java.util.logging.FileHandler.pattern=target/tests-logging.log
 java.util.logging.FileHandler.level=ALL
 java.util.logging.ConsoleHandler.level=INFO
 
-# our configuration
+# our configuration (usable for /etc/tomcat*/logging.properties as well)
 java.util.logging.SimpleFormatter.format=%1$tF %1$tT.%1$tL %4$7s (%2$s) [%3$s] %5$s%6$s%n
 org.apache.juli.OneLineFormatter.timeFormat=yyyy-MM-dd HH:mm:ss
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
