hook up depsrc.sh

--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,19 @@
 						<artifactId>exec-maven-plugin</artifactId>
 						<executions>
 							<execution>
+								<id>build-depsrcs</id>
+								<phase>generate-resources</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>src/main/ancillary/depsrc.sh</executable>
+									<environmentVariables>
+										<DEPSRC_RUN_FROM_MAVEN>true</DEPSRC_RUN_FROM_MAVEN>
+									</environmentVariables>
+								</configuration>
+							</execution>
+							<execution>
 								<id>dep-check</id>
 								<phase>install</phase>
 								<goals>
@@ -181,6 +194,19 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-assembly-plugin</artifactId>
 						<executions>
+							<execution>
+								<id>dist-assembly-depsrc</id>
+								<phase>compile</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+								<configuration>
+									<attach>false</attach>
+									<descriptors>
+										<descriptor>release/depsrc.xml</descriptor>
+									</descriptors>
+								</configuration>
+							</execution>
 							<execution>
 								<id>mksrc-mvnparent-package</id>
 								<phase>package</phase>
