--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,7 @@
 									<goal>exec</goal>
 								</goals>
 								<configuration>
-									<executable>./src/main/ancillary/mksrc.sh</executable>
+									<executable>src/main/ancillary/mksrc.sh</executable>
 									<environmentVariables>
 										<MKSRC_RUN_FROM_MAVEN>true</MKSRC_RUN_FROM_MAVEN>
 									</environmentVariables>
