--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 		<doclint.optappend>-Xdoclint:all</doclint.optappend>
 		<!-- maven plugins -->
 		<gmavenplus.plugin.version>1.9.0</gmavenplus.plugin.version>
+		<maven.antrun.version>3.0.0</maven.antrun.version>
 		<maven.assembly.version>3.3.0</maven.assembly.version>
 		<maven.buildhelper.version>3.1.0</maven.buildhelper.version>
 		<maven.compiler.version>3.8.1</maven.compiler.version>
@@ -74,6 +75,7 @@
 		<!-- due to MRESOURCES-237 and MSHARED-325 -->
 		<maven.resources.version>2.6</maven.resources.version>
 		<maven.shade.version>3.2.3</maven.shade.version>
+		<maven.site.version>3.9.0</maven.site.version>
 		<maven.source.version>3.2.1</maven.source.version>
 		<maven.surefire.version>2.22.2</maven.surefire.version>
 		<maven.war.version>2.6</maven.war.version>
@@ -356,6 +358,12 @@
 					</configuration>
 				</plugin>
 				<plugin>
+					<!-- from Super POM, not used -->
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-antrun-plugin</artifactId>
+					<version>${maven.antrun.version}</version>
+				</plugin>
+				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
 					<version>${maven.assembly.version}</version>
@@ -483,6 +491,12 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-shade-plugin</artifactId>
 					<version>${maven.shade.version}</version>
+				</plugin>
+				<plugin>
+					<!-- from Super POM, not used -->
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>${maven.site.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
