--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
 		<maven.antrun.version>3.0.0</maven.antrun.version>
 		<maven.assembly.version>3.3.0</maven.assembly.version>
 		<maven.buildhelper.version>3.1.0</maven.buildhelper.version>
+		<maven.clean.version>3.1.0</maven.clean.version>
 		<maven.compiler.version>3.8.1</maven.compiler.version>
 		<maven.dependency.version>3.1.2</maven.dependency.version>
 		<maven.deploy.version>2.8.2</maven.deploy.version>
@@ -66,6 +67,7 @@
 		<maven.enforcer.version>1.4.1</maven.enforcer.version>
 		<maven.exec.version>1.6.0</maven.exec.version>
 		<maven.gpg.version>1.6</maven.gpg.version>
+		<maven.install.version>2.5.2</maven.install.version>
 		<maven.jacoco.version>0.8.5</maven.jacoco.version>
 		<maven.jar.version>3.2.0</maven.jar.version>
 		<maven.javadoc.version>3.2.0</maven.javadoc.version>
@@ -377,6 +379,11 @@
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-clean-plugin</artifactId>
+					<version>${maven.clean.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>${maven.compiler.version}</version>
 					<configuration>
@@ -438,6 +445,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-enforcer-plugin</artifactId>
 					<version>${maven.enforcer.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-install-plugin</artifactId>
+					<version>${maven.install.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
