--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<configuration>
-							<javadocExecutable>/usr/bin</javadocExecutable>
+							<!--javadocExecutable>/usr/bin</javadocExecutable-->
 							<source>${javaRelease}</source>
 						</configuration>
 					</plugin>
