--- a/pom.xml
+++ b/pom.xml
@@ -119,8 +119,26 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<configuration>
-							<javadocExecutable>/usr/bin</javadocExecutable>
 							<source>${javaRelease}</source>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>jre-not-below-jdk</id>
+			<activation>
+				<file>
+					<exists>${java.home}/bin/javadoc</exists>
+				</file>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<configuration>
+							<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
 						</configuration>
 					</plugin>
 				</plugins>
