add a comment about autodetection of jul configs in JARs

--- a/src/test/resources/logging.properties
+++ b/src/test/resources/logging.properties
@@ -13,3 +13,9 @@ org.apache.juli.OneLineFormatter.timeFormat=yyyy-MM-dd HH:mm:ss
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 # avoid XML log records
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
+
+# note: contrary to log4j and logback, this file is probably
+# not autodetected by a dependency on our tests JAR; copy it
+# into all src/test/resources/ of your project to use it :-|
+# https://evolvis.org/plugins/scmgit/cgi-bin/gitweb.cgi?p=tartools/mvnparent.git;a=commit;h=4d55c96f3731412bf6194fb3ec8b79e0fa22a09e
+# contains sample code to runtime load it from the classpath
