--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,8 @@
 		<maven.surefire.version>2.22.2</maven.surefire.version>
 		<maven.war.version>2.6</maven.war.version>
 		<pitest.plugin.version>1.5.1</pitest.plugin.version>
+		<!-- dependency management -->
+		<trajano.version>2.1.0</trajano.version>
 	</properties>
 	<scm>
 		<connection>scm:git:https://evolvis.org/anonscm/git/tartools/mvnparent.git</connection>
@@ -167,6 +169,29 @@
 		</profile>
 		<profile>
 			<id>build-mvnparent</id>
+			<properties>
+				<junit.version>5.6.2</junit.version>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>net.trajano.commons</groupId>
+					<artifactId>commons-testing</artifactId>
+					<version>${trajano.version}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.junit.jupiter</groupId>
+					<artifactId>junit-jupiter-api</artifactId>
+					<version>${junit.version}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.junit.jupiter</groupId>
+					<artifactId>junit-jupiter-engine</artifactId>
+					<version>${junit.version}</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
 			<build>
 				<plugins>
 					<plugin>
@@ -256,6 +281,41 @@
 					</plugin>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>compile</id>
+								<goals>
+									<goal>compile</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>test-compile</id>
+								<goals>
+									<goal>testCompile</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-dependency-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>analyse-dependency-usage</id>
+								<configuration>
+									<failOnWarning>false</failOnWarning>
+									<ignoredUnusedDeclaredDependencies combine.children="append">
+										<!-- must be on the classpath -->
+										<ignoredUnusedDeclaredDependency>org.junit.jupiter:junit-jupiter-engine</ignoredUnusedDeclaredDependency>
+									</ignoredUnusedDeclaredDependencies>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<!--configuration> <archive> <manifest> <mainClass>org.evolvis.tartools.mvnparent.examples.Main</mainClass> </manifest> </archive> </configuration-->
+						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-jar-plugin</artifactId>
 						<executions>
 							<execution>
@@ -263,6 +323,12 @@
 								<phase>package</phase>
 								<goals>
 									<goal>test-jar</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>package</id>
+								<goals>
+									<goal>jar</goal>
 								</goals>
 							</execution>
 						</executions>
@@ -276,6 +342,18 @@
 								<phase>process-test-resources</phase>
 								<goals>
 									<goal>testResources</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>test</id>
+								<goals>
+									<goal>test</goal>
 								</goals>
 							</execution>
 						</executions>
@@ -718,6 +796,19 @@
 	</build>
 	<dependencyManagement>
 		<dependencies>
+			<!-- test helper for utility classes -->
+			<dependency>
+				<groupId>net.trajano.commons</groupId>
+				<artifactId>commons-testing</artifactId>
+				<version>${trajano.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<!-- InitialiseLogging helper to load config from classpath -->
+			<dependency>
+				<groupId>org.evolvis.tartools</groupId>
+				<artifactId>maven-parent</artifactId>
+				<version>${org.evolvis.tartools.maven-parent.version}</version>
+			</dependency>
 			<!-- use this in e.g. plugin[].dependencies to make it log sanely -->
 			<dependency>
 				<groupId>org.evolvis.tartools</groupId>
