--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<url>https://evolvis.org/plugins/scmgit/cgi-bin/gitweb.cgi?p=tartools/mvnparent.git</url>
 	<licenses>
 		<license>
+			<!-- short name: MirBSD -->
 			<name>The MirOS Licence</name>
 			<url>http://www.mirbsd.org/MirOS-Licence.htm</url>
 		</license>
@@ -82,8 +83,6 @@
 		<maven.surefire.version>2.22.2</maven.surefire.version>
 		<maven.war.version>2.6</maven.war.version>
 		<pitest.plugin.version>1.5.1</pitest.plugin.version>
-		<!-- dependency management -->
-		<trajano.version>2.1.0</trajano.version>
 	</properties>
 	<scm>
 		<connection>scm:git:https://evolvis.org/anonscm/git/tartools/mvnparent.git</connection>
@@ -169,29 +168,9 @@
 		</profile>
 		<profile>
 			<id>build-mvnparent</id>
-			<properties>
-				<junit.version>5.6.2</junit.version>
-			</properties>
-			<dependencies>
-				<dependency>
-					<groupId>net.trajano.commons</groupId>
-					<artifactId>commons-testing</artifactId>
-					<version>${trajano.version}</version>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.junit.jupiter</groupId>
-					<artifactId>junit-jupiter-api</artifactId>
-					<version>${junit.version}</version>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.junit.jupiter</groupId>
-					<artifactId>junit-jupiter-engine</artifactId>
-					<version>${junit.version}</version>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
+			<modules>
+				<module>lib</module>
+			</modules>
 			<build>
 				<plugins>
 					<plugin>
@@ -215,6 +194,7 @@
 								</configuration>
 							</execution>
 						</executions>
+						<inherited>false</inherited>
 					</plugin>
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
@@ -281,41 +261,6 @@
 					</plugin>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>compile</id>
-								<goals>
-									<goal>compile</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>test-compile</id>
-								<goals>
-									<goal>testCompile</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-dependency-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>analyse-dependency-usage</id>
-								<configuration>
-									<failOnWarning>false</failOnWarning>
-									<ignoredUnusedDeclaredDependencies combine.children="append">
-										<!-- must be on the classpath -->
-										<ignoredUnusedDeclaredDependency>org.junit.jupiter:junit-jupiter-engine</ignoredUnusedDeclaredDependency>
-									</ignoredUnusedDeclaredDependencies>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<!--configuration> <archive> <manifest> <mainClass>org.evolvis.tartools.mvnparent.examples.Main</mainClass> </manifest> </archive> </configuration-->
-						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-jar-plugin</artifactId>
 						<executions>
 							<execution>
@@ -325,13 +270,8 @@
 									<goal>test-jar</goal>
 								</goals>
 							</execution>
-							<execution>
-								<id>package</id>
-								<goals>
-									<goal>jar</goal>
-								</goals>
-							</execution>
 						</executions>
+						<inherited>false</inherited>
 					</plugin>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -345,18 +285,7 @@
 								</goals>
 							</execution>
 						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>test</id>
-								<goals>
-									<goal>test</goal>
-								</goals>
-							</execution>
-						</executions>
+						<inherited>false</inherited>
 					</plugin>
 				</plugins>
 			</build>
@@ -796,25 +725,18 @@
 	</build>
 	<dependencyManagement>
 		<dependencies>
-			<!-- test helper for utility classes -->
-			<dependency>
-				<groupId>net.trajano.commons</groupId>
-				<artifactId>commons-testing</artifactId>
-				<version>${trajano.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<!-- InitialiseLogging helper to load config from classpath -->
-			<dependency>
-				<groupId>org.evolvis.tartools</groupId>
-				<artifactId>maven-parent</artifactId>
-				<version>${org.evolvis.tartools.maven-parent.version}</version>
-			</dependency>
 			<!-- use this in e.g. plugin[].dependencies to make it log sanely -->
 			<dependency>
 				<groupId>org.evolvis.tartools</groupId>
 				<artifactId>maven-parent</artifactId>
 				<version>${org.evolvis.tartools.maven-parent.version}</version>
 				<classifier>tests</classifier>
+			</dependency>
+			<!-- InitialiseLogging helper to load config from classpath -->
+			<dependency>
+				<groupId>org.evolvis.tartools</groupId>
+				<artifactId>maven-parent-lib</artifactId>
+				<version>${org.evolvis.tartools.maven-parent.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
