--- a/src/test/resources/logging.properties
+++ b/src/test/resources/logging.properties
@@ -14,8 +14,10 @@ java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 # avoid XML log records
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 
-# note: contrary to log4j and logback, this file is probably
-# not autodetected by a dependency on our tests JAR; copy it
-# into all src/test/resources/ of your project to use it and
-# see org.evolvis.tartools.mvnparent.examples.Main for usage
-# of InitialiseLogging.InitialiseJDK14Logging() for runtime.
+# note: contrary to log4j and logback, jul does not normally
+# autodetect this configuration file on the classpath (which
+# org.evolvis.tartools:maven-parent:jar:tests inclusion cau-
+# ses), so either copy this into all src/test/resources/ di-
+# rectories of your projects or use InitialiseJDK14Logging()
+# from org.evolvis.tartools:maven-parent-lib:jar (its source
+# jar contains a Main example class) from InitialiseLogging.
