shuffle phases around
so we can depend in mksrc.sh on the result from depsrc.xml

(cherry picked from commit 48bb93d60f70d369fa66614548b0a7663073eeaf)
from VerA.web

--- a/pom.xml
+++ b/pom.xml
@@ -225,7 +225,7 @@
 							</execution>
 							<execution>
 								<id>mksrc-mvnparent-build</id>
-								<phase>compile</phase>
+								<phase>package</phase>
 								<goals>
 									<goal>exec</goal>
 								</goals>
