use a more generic id, now this is in a profile and not inherited

--- a/pom.xml
+++ b/pom.xml
@@ -229,7 +229,7 @@
 								</configuration>
 							</execution>
 							<execution>
-								<id>mksrc-mvnparent-build</id>
+								<id>mksrc-run</id>
 								<phase>package</phase>
 								<goals>
 									<goal>exec</goal>
