for depsrc, all <dependencies/> must be moved to a profile from toplev

--- a/pom.xml
+++ b/pom.xml
@@ -297,6 +297,14 @@
 			</build>
 		</profile>
 		<profile>
+			<id>with-implicit-dependencies</id>
+			<activation>
+				<property>
+					<name>!without-implicit-dependencies</name>
+				</property>
+			</activation>
+		</profile>
+		<profile>
 			<id>dstrepo-central</id>
 			<distributionManagement>
 				<repository>
