--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.evolvis.tartools</groupId>
 		<artifactId>maven-parent</artifactId>
-		<version>1.28</version>
+		<version>1.29-SNAPSHOT</version>
 	</parent>
 	<artifactId>maven-parent-lib</artifactId>
 	<packaging>jar</packaging>
