--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -15,6 +15,7 @@
 			<name>The MirOS Licence</name>
 			<url>http://www.mirbsd.org/MirOS-Licence.htm</url>
 		</license>
+		<!-- see https://issues.apache.org/jira/browse/MJAVADOC-669 for the source JAR -->
 	</licenses>
 	<properties>
 		<!-- dependency management -->
