--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<version>1.29-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
-	<description>Parent POM for Maven projects</description>
+	<description>Parent POM for Maven projects — POM</description>
 	<url>https://evolvis.org/plugins/scmgit/cgi-bin/gitweb.cgi?p=tartools/mvnparent.git</url>
 	<licenses>
 		<license>
@@ -24,6 +24,7 @@
 		<license>
 			<name>CC-BY-SA 3.0 (unported)</name>
 			<url>https://creativecommons.org/licenses/by-sa/3.0/legalcode.txt</url>
+			<comments>only for: src/main/ancillary/mvnrepo.xsl</comments>
 		</license>
 	</licenses>
 	<developers>
@@ -40,21 +41,24 @@
 	</organization>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
-		<build.timestamp>${maven.build.timestamp}</build.timestamp>
-		<releaseVersion>${project.version}</releaseVersion>
-		<org.evolvis.tartools.maven-parent.version>1.29-SNAPSHOT</org.evolvis.tartools.maven-parent.version>
+		<!-- ‣ configurable settings -->
 		<archiver.copyright.firstyear>2016</archiver.copyright.firstyear>
 		<archiver.copyright.lastyear>2021</archiver.copyright.lastyear>
 		<archiver.copyright>Copyright © ${archiver.copyright.firstyear}–${archiver.copyright.lastyear}; Licensor: $version_vendor</archiver.copyright>
+		<doclint.optappend>-Xdoclint:all</doclint.optappend>
 		<javaRelease>8</javaRelease>
-		<maven.compiler.source>${javaRelease}</maven.compiler.source>
-		<maven.compiler.release>${javaRelease}</maven.compiler.release>
 		<!-- http://groovy.github.io/GMavenPlus/compileTests-mojo.html#targetBytecode -->
 		<gmavenplus.javaRelease>1.8</gmavenplus.javaRelease>
 		<maven.minimum.version>3.2</maven.minimum.version>
-		<doclint.optappend>-Xdoclint:all</doclint.optappend>
-		<!-- maven plugins -->
+		<!-- ‣ internal and utility settings -->
+		<maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
+		<build.timestamp>${maven.build.timestamp}</build.timestamp>
+		<maven.compiler.source>${javaRelease}</maven.compiler.source>
+		<maven.compiler.release>${javaRelease}</maven.compiler.release>
+		<releaseVersion>${project.version}</releaseVersion>
+		<!-- dependency management for the “tests” classifier and library JARs we provide -->
+		<org.evolvis.tartools.maven-parent.version>1.29-SNAPSHOT</org.evolvis.tartools.maven-parent.version>
+		<!-- ‣ maven plugins -->
 		<gmavenplus.plugin.version>1.12.1</gmavenplus.plugin.version>
 		<maven.antrun.version>3.0.0</maven.antrun.version>
 		<maven.assembly.version>3.3.0</maven.assembly.version>
@@ -83,6 +87,7 @@
 		<maven.surefire.version>2.22.2</maven.surefire.version>
 		<maven.war.version>2.6</maven.war.version>
 		<pitest.plugin.version>1.6.2</pitest.plugin.version>
+		<!-- ‣ dependency management -->
 	</properties>
 	<scm>
 		<connection>scm:git:https://evolvis.org/anonscm/git/tartools/mvnparent.git</connection>
@@ -92,19 +97,68 @@
 	</scm>
 	<profiles>
 		<profile>
+			<id>dstrepo-central</id>
+			<distributionManagement>
+				<repository>
+					<id>ossrh</id>
+					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+				</repository>
+				<snapshotRepository>
+					<id>ossrh</id>
+					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+				</snapshotRepository>
+			</distributionManagement>
+		</profile>
+		<profile>
+			<id>dstrepo-tarent</id>
+			<distributionManagement>
+				<repository>
+					<id>tarent-nexus</id>
+					<name>tarent-nexus releases</name>
+					<url>https://repo-bn-01.lan.tarent.de/repository/maven-releases</url>
+				</repository>
+				<snapshotRepository>
+					<id>tarent-nexus</id>
+					<name>tarent-nexus snapshots</name>
+					<url>https://repo-bn-01.lan.tarent.de/repository/maven-snapshots</url>
+				</snapshotRepository>
+			</distributionManagement>
+		</profile>
+		<profile>
+			<id>gpg</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>${maven.gpg.version}</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
 			<id>jdk8orolder</id>
 			<!-- only tested with JDK 8 -->
 			<activation>
 				<jdk>(,9)</jdk>
 			</activation>
 			<properties>
-				<!-- maven plugins -->
-				<!-- ↓ last version working with JDK 8 -->
+				<!-- ‣ maven plugins -->
+				<!-- last version working with JDK 8 -->
 				<maven.compiler.version>3.5.1</maven.compiler.version>
-				<!-- ↓ 3.1.0 calls javadoc with -‒release -->
+				<!-- because 3.1.0 calls javadoc with -‒release -->
 				<maven.javadoc.version>3.0.1</maven.javadoc.version>
-				<!-- dependencies -->
-				<!-- ↓ last version working with JDK 8 -->
+				<!-- ‣ dependency management -->
+				<!-- last version working with JDK 8 -->
 				<mockito.version>2.10.0</mockito.version>
 			</properties>
 		</profile>
@@ -146,26 +200,14 @@
 			</build>
 		</profile>
 		<profile>
-			<id>gpg</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<version>${maven.gpg.version}</version>
-						<executions>
-							<execution>
-								<id>sign-artifacts</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
+			<id>with-implicit-dependencies</id>
+			<activation>
+				<property>
+					<name>!without-implicit-dependencies</name>
+				</property>
+			</activation>
 		</profile>
+		<!-- not inherited -->
 		<profile>
 			<id>build-mvnparent</id>
 			<modules>
@@ -296,42 +338,6 @@
 				</plugins>
 			</build>
 		</profile>
-		<profile>
-			<id>with-implicit-dependencies</id>
-			<activation>
-				<property>
-					<name>!without-implicit-dependencies</name>
-				</property>
-			</activation>
-		</profile>
-		<profile>
-			<id>dstrepo-central</id>
-			<distributionManagement>
-				<repository>
-					<id>ossrh</id>
-					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-				</repository>
-				<snapshotRepository>
-					<id>ossrh</id>
-					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-				</snapshotRepository>
-			</distributionManagement>
-		</profile>
-		<profile>
-			<id>dstrepo-tarent</id>
-			<distributionManagement>
-				<repository>
-					<id>tarent-nexus</id>
-					<name>tarent-nexus releases</name>
-					<url>https://repo-bn-01.lan.tarent.de/repository/maven-releases</url>
-				</repository>
-				<snapshotRepository>
-					<id>tarent-nexus</id>
-					<name>tarent-nexus snapshots</name>
-					<url>https://repo-bn-01.lan.tarent.de/repository/maven-snapshots</url>
-				</snapshotRepository>
-			</distributionManagement>
-		</profile>
 	</profiles>
 	<build>
 		<pluginManagement>
@@ -378,28 +384,28 @@
 					<version>${maven.mycila.version}</version>
 					<configuration>
 						<basedir>${project.basedir}</basedir>
-						<quiet>false</quiet>
-						<failIfMissing>true</failIfMissing>
 						<aggregate>true</aggregate>
+						<encoding>UTF-8</encoding>
+						<failIfMissing>true</failIfMissing>
+						<headerDefinitions>
+							<headerDefinition>${project.basedir}/src/main/ancillary/myc-javapkg.xml</headerDefinition>
+						</headerDefinitions>
 						<includes>
 							<include>**/*.cs</include>
 							<include>**/*.java</include>
 							<include>**/*.js</include>
 						</includes>
-						<headerDefinitions>
-							<headerDefinition>${project.basedir}/src/main/ancillary/myc-javapkg.xml</headerDefinition>
-						</headerDefinitions>
 						<mapping combine.children="append">
 							<java>JavaPackage_style</java>
 						</mapping>
+						<quiet>false</quiet>
+						<strictCheck>true</strictCheck>
 						<useDefaultExcludes>true</useDefaultExcludes>
 						<useDefaultMapping>true</useDefaultMapping>
-						<encoding>UTF-8</encoding>
-						<strictCheck>true</strictCheck>
 					</configuration>
 				</plugin>
 				<plugin>
-					<!-- from Super POM, not used -->
+					<!-- from Super POM, not used by us -->
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-antrun-plugin</artifactId>
 					<version>${maven.antrun.version}</version>
@@ -476,8 +482,8 @@
 					<artifactId>maven-eclipse-plugin</artifactId>
 					<version>${maven.eclipse.version}</version>
 					<configuration>
-						<downloadSources>true</downloadSources>
 						<downloadJavadocs>true</downloadJavadocs>
+						<downloadSources>true</downloadSources>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -544,7 +550,7 @@
 					<version>${maven.shade.version}</version>
 				</plugin>
 				<plugin>
-					<!-- from Super POM, not used -->
+					<!-- from Super POM, not used any more -->
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-site-plugin</artifactId>
 					<version>${maven.site.version}</version>
