work around https://issues.sonatype.org/browse/MVNCENTRAL-6515

--- a/pom.xml
+++ b/pom.xml
@@ -691,6 +691,7 @@
 							<localRepoProperty>${M2_REPO}</localRepoProperty>
 							<!-- this filename is stupid but matches the one it’s attached as -->
 							<outputFile>${project.build.directory}/${project.artifactId}-${project.version}-classpath.${project.packaging}</outputFile>
+							<outputFilterFile>true</outputFilterFile>
 							<outputProperty>runtime.classpath</outputProperty>
 							<pathSeparator>:</pathSeparator>
 							<regenerateFile>true</regenerateFile>
